# Fuzzing-Scripts

./: .gitignore  Cargo.toml  README.md  output.txt
afl_scripts/: Cargo.toml
afl_scripts/src/: main.rs  prepare.rs  tmin.rs
find_literal/: Cargo.toml
find_literal/src/: main.rs
